Fix content on smaller screens, create contact section, and fix styling

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,6 +5,7 @@
 
 html {
   font-family: 'Open Sans', sans-serif;
+  scroll-behavior: smooth;
 }
 
 nav {
@@ -46,7 +47,7 @@ nav ul {
 }
 
 .nav-links a:hover {
-  opacity: 0.75;
+  opacity: 0.6;
 }
 
 /* @keyframes fadein {
@@ -81,13 +82,17 @@ nav ul {
 }
 
 .github-link:hover {
-  opacity: 0.8;
+  opacity: 0.6;
 }
 
 .home-section-content {
   text-align: center;
   margin: 12.5% auto;
   width: 20%;
+}
+
+.home-section-content h1 {
+  text-shadow: 5px 5px 10px black;
 }
 
 .section-heading {
@@ -97,6 +102,10 @@ nav ul {
 
 #about-section {
   padding-bottom: 5%;
+}
+
+#about-section img {
+  width: 20%;
 }
 
 .about-me-excerpt {
@@ -110,11 +119,12 @@ nav ul {
   display: flex;
   margin-left: 15%;
   margin-top: 3%;
+  align-items: center;
 }
 
 .left-content-text {
   float: right;
-  width: 17.5%;
+  width: 20%;
   text-align: left;
   margin-left: 1%;
 }
@@ -147,7 +157,7 @@ nav ul {
 }
 
 .current-job-text {
-  width: 15%;
+  width: 17%;
 }
 
 /* .carousel-cell {
@@ -158,7 +168,11 @@ nav ul {
 } */
 
 #projects-section {
-  background-color: grey;
+  background-color: rgba(104, 103, 103, 0.555);
+}
+
+#projects-section h1 {
+  padding-top: 1%;
 }
 
 .project-card {
@@ -179,6 +193,47 @@ nav ul {
 .card-body p {
   width: 350px;
   margin: 25px auto;
+}
+
+#contact-section {
+  padding-top: 5%;
+  text-align: center;
+}
+
+#contact-section h1 {
+  margin: 2%;
+}
+
+input {
+  display: block;
+  margin: 2% auto;
+}
+
+footer {
+  text-align: center;
+  margin-top: 5%;
+  padding-bottom: 0.5%;
+}
+
+footer a {
+  color: blue;
+  margin: 0 0.5%;
+}
+
+footer a:hover {
+  opacity: 0.6;
+}
+
+.footer-copyright {
+  margin-top: 0.5%;
+}
+
+input[type='submit'] {
+  padding: 0.25%;
+}
+
+input[type='submit']:hover {
+  cursor: pointer;
 }
 
 @media only screen and (max-width: 1650px) {
@@ -203,10 +258,14 @@ nav ul {
   }
 
   .about-me-excerpt {
-    width: 50%;
+    width: 60%;
   }
 
-  .current-job-text p {
-    width: 70%;
+  .left-content {
+    margin-top: 0;
+  }
+
+  .right-content {
+    margin-top: 0;
   }
 }
